tests/tests/expected/milling/siemens-840c/error_messages/siemens-840c_Probing No Corner_IN.output
Warning: Multiple work offsets used in program.
Error: Failed while processing onCycle() for record 2184.
Error: Out of Position and Wrong size action not supported
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Failed to execute configuration.
Error: Failed to post process. See below for details.
